--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section" id="關於我">
+            <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         胡睦伊
@@ -58,7 +58,7 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-            <section class="resume-section" id="經歷">
+            <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">經歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
